--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -78,4 +78,4 @@ jobs:
           UNBOUND_PLATFORM_ARGS=${{ matrix.platform_args }}
           UNBOUND_PLATFORM_PKGS=${{ matrix.platform_pkgs }}
         push: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.push || startsWith(github.ref, 'refs/tags/') }}
-        tags: ${{ env.DOCKER_NAMESPACE }}/unbound-docker:${{ github.event_name != 'release' && github.sha || github.ref_name }}
+        tags: ${{ env.DOCKER_NAMESPACE }}/unbound-docker:${{ github.event_name != 'release' && github.sha || github.ref_name }}-${{ matrix.release }}
