Update OpenSSL fingerprint
The fingerprint has changed recently:
Here: https://github.com/openssl/openssl/commit/a9fa07f47cea6a43d5ac4a3aa336ab34756c2e9b
And here: https://github.com/openssl/web/issues/416

--- a/1.20.0/Dockerfile
+++ b/1.20.0/Dockerfile
@@ -4,8 +4,8 @@ LABEL maintainer="Matthew Vance"
 ENV VERSION_OPENSSL=openssl-3.3.1 \
     SHA256_OPENSSL=777cd596284c883375a2a7a11bf5d2786fc5413255efab20c50d6ffe6d020b7e \
     SOURCE_OPENSSL=https://www.openssl.org/source/ \
-    # OpenSSL OMC
-    OPGP_OPENSSL_1=EFC0A467D613CB83C7ED6D30D894E2CE8B3D79F5 \
+    # OpenSSL
+    OPGP_OPENSSL_1=BA5473A2B0587B07FB27CF2D216094DFD0CB81EF \
     # Richard Levitte
     OPGP_OPENSSL_2=7953AC1FBC3DC8B3B292393ED5E9E43F7DF9EE8C \
     # Matt Caswell
