--- a/1.20.0/Dockerfile
+++ b/1.20.0/Dockerfile
@@ -69,6 +69,7 @@ RUN build_deps="curl gcc libc-dev libevent-dev libexpat1-dev libnghttp2-dev make
       ca-certificates \
       ldnsutils \
       libevent-2.1-7 \
+      libhiredis-dev \
       libexpat1 \
       libprotobuf-c-dev \
       protobuf-c-compiler && \
@@ -86,6 +87,7 @@ RUN build_deps="curl gcc libc-dev libevent-dev libexpat1-dev libnghttp2-dev make
         --with-username=_unbound \
         --with-ssl=/opt/openssl \
         --with-libevent \
+        --with-libhiredis \
         --with-libnghttp2 \
         --enable-dnstap \
         --enable-tfo-server \
@@ -120,6 +122,7 @@ RUN set -x && \
       ca-certificates \
       ldnsutils \
       libevent-2.1-7 \
+      libhiredis0.14 \
       libnghttp2-14 \
       libexpat1 \
       libprotobuf-c1 && \
